--- a/leafy/leafy-frontend/Dockerfile
+++ b/leafy/leafy-frontend/Dockerfile
@@ -16,11 +16,15 @@ COPY . /app
 RUN npm run build
 
 FROM nginx:1.21.4-alpine
+COPY nginx.conf /etc/nginx/conf.d/default.conf.template
+ENV BACKEND_HOST leafy
+ENV BACKEND_PORT 8080
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY docker-entrypoint.sh /usr/local/bin
+RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
 COPY --from=build /app/dist /usr/share/nginx/html
 
 EXPOSE 80
-ENTRYPOINT ["nginx"]
-CMD ["-g", "daemon off;"]
+ENTRYPOINT ["docker-entrypoint.sh"]
+CMD ["nginx", "-g", "daemon off;"]
